--- a/managedServices.html
+++ b/managedServices.html
@@ -26,7 +26,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-image: url("./images/MS_bg_img1.png");
-    height: auto;
+    height: 700px;
     width: '100%';
     }
     .bgimg-1::after {
@@ -138,10 +138,10 @@
 }
 .grid-container {
   display: grid;
-  grid-template-columns: 400px 400px 400px;
+  grid-template-columns: auto auto auto;
   justify-content: center;
   align-content: center;
-  padding: 0px 110px;
+  padding: 0px 84px;
 }
 
 .grid-item {
@@ -175,19 +175,7 @@
       padding: 16px; /* Adjust padding for grid items */
   }
 }
-.contact-row {
-  display: flex;
-  margin-bottom: 10px;
- 
-  align-items: center;
-}
 
-
-.contact-row p {
- 
-  margin: 4px 4px 0;  /* Top margin only for spacing between label and text */
-  line-height: 1.5;
-}
   </style>
   </head>
 <body>
@@ -206,7 +194,7 @@
       <a href="./softwareDevelopment.html" class="w3-bar-item w3-button "> Software Development</a>
       <a href="./managedServices.html" class="w3-bar-item w3-button active"> Managed Services</a>
       <a href="./consulting.html" class="w3-bar-item w3-button">Consulting</a>
-      <a href="./contactUs.html" class="w3-bar-item w3-button">Contact Us</a>
+      <a href="./contactUs.html" class="w3-bar-item w3-button w3-button-contact">Contact Us</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -242,8 +230,8 @@
     <div class="w3-container element" style="padding-bottom: 0;" >
         <div class="w3-row-padding w3-padding-32">
           <div class="w3-col l6 m11">
-            <h3 class="w3-xxlarge w3-hide-small">Software Engineering Services</h3>
-            <h3 class="w3-xlarge w3-hide-large w3-hide-medium">Software Engineering Services</h3>
+            <h3 class="w3-xxlarge w3-hide-small">Our Managed Solutions</h3>
+            <h3 class="w3-xlarge w3-hide-large w3-hide-medium">Our Managed Solutions</h3>
             <p class=" w3-hide-small" style="line-height: 36px">We provide adaptable managed services tailored to meet our customers' specific requirements, whether for long-term retention or shorter project-based engagements like client portal content migration initiatives. Our comprehensive solution encompasses a range of essential functions, including help desk, service desk, account management, asset management, remote controls, and advanced reporting, all within a secure multi-tenant architecture. By seamlessly integrating with our clients' internal teams, we offer the necessary skills, training, tools, and process integration to facilitate a smooth transition, while our adaptability ensures scalable and agile managed services.</p>
             <p class="w3-hide-large w3-hide-medium" style="line-height: 36px">We provide adaptable managed services tailored to meet our customers' specific requirements, whether for long-term retention or shorter project-based engagements like client portal content migration initiatives. Our comprehensive solution encompasses a range of essential functions, including help desk, service desk, account management, asset management, remote controls, and advanced reporting, all within a secure multi-tenant architecture. By seamlessly integrating with our clients' internal teams, we offer the necessary skills, training, tools, and process integration to facilitate a smooth transition, while our adaptability ensures scalable and agile managed services.</p>
   
@@ -261,63 +249,63 @@
       <h3 class="w3-xlarge w3-hide-large w3-hide-medium">How we Safeguard Your Enterprise and Customers</h3>
       <p style="font-size: 22px;line-height: normal;"> Our exceptional Managed Security solutions are easy to implement and oversee, consistently achieving high success rates in thwarting contemporary cyber threats.</p>
       <div class="w3-row-padding" style="margin-top:32px;padding:0">
-        <div class="w3-col l3 m6">
-          <div class="w3-card w3-orange" style="padding: 16px 32px; min-height:339px">
+        <div class="w3-col l3 m6" >
+          <div class="w3-card w3-orange" style="padding: 16px 32px; min-height:380px">
             <img  src="./images/safe_img1.png" class="w3-padding-32"/>
-           <p>
+           <p style="font-size: 24px; line-height: 28px; font-weight: 400;">
           Advanced cyber security system leveraging AI technology.
            </p>
            </div>
           </div>
          
           <div class="w3-col l3 m6">
-            <div class="w3-card w3-deep-blue" style="padding:16px 32px; min-height:339px">
+            <div class="w3-card w3-deep-blue" style="padding:16px 32px; min-height:380px">
               <img  src="./images/safe_img2.png" class="w3-padding-32"/>
-             <p>
+              <p style="font-size: 24px; line-height: 28px; font-weight: 400;">
              Streamline client protection with a unified console and cloud-native security.
              </p>
              </div>
             </div>
             <div class="w3-col l3 m6">
-              <div class="w3-card w3-orange" style="padding: 16px 32px; min-height:339px">
+              <div class="w3-card w3-orange" style="padding: 16px 32px; min-height:380px">
                 <img  src="./images/safe_img3.png" class="w3-padding-32"/>
-               <p>
+                <p style="font-size: 24px; line-height: 28px; font-weight: 400;">
                 Effortlessly scale and manage licenses with flexible pricing options.
                </p>
                </div>
               </div>
               <div class="w3-col l3 m6">
-                <div class="w3-card w3-deep-blue" style="padding: 16px 32px; min-height:339px">
+                <div class="w3-card w3-deep-blue" style="padding: 16px 32px; min-height:380px">
                   <img  src="./images/safe_img4.png" class="w3-padding-32"/>
-                 <p>
+                  <p style="font-size: 24px; line-height: 28px; font-weight: 400;">
                   Seamlessly integrated with essential RMM, PSA, and IT documentation providers.
                  </p>
                  </div>
                 </div>
         </div>
 </div>
-<div style="background-color:#f1f1f1!important; ">
+<div style="background-color:F8F8F8!important; ">
     <div class="w3-border-top"> </div>
     <div class="grid-container">
         <div class="grid-item">
             <img  src="./images/safe_img5.png" class="w3-padding-32"/>
-            <h4 class="w3-text-orange"> <b>Cybersecurity as a System</b></h4>
-           <p class="w3-large">
+            <h4 class="w3-text-orange" style="font-size: 25x;"> <b>Cybersecurity as a System</b></h4>
+            <p  style="font-size: 16px; line-height: 36px;">
             Experience the convenience of managing our cutting-edge artificial intelligence-based attack prediction and adaptation system through a single, user-friendly cloud-based platform. With our advanced technology, you gain the upper hand in defending against cyber threats.
            </p>
         </div>
         <div class="grid-item">
             <img  src="./images/safe_img6.svg" class="w3-padding-32"/>
-          <h4 class="w3-text-orange"> <b>Increase Your Profit
+          <h4 class="w3-text-orange" style="font-size: 25x;"> <b>Increase Your Profit
         </b></h4>
-         <p class="w3-large">
+        <p  style="font-size: 16px; line-height: 36px;">
             With the Synez managed service program, you have the flexibility to control the delivery of licenses, allowing you to offer competitive pricing that maximizes your profit margin. Enjoy the freedom to tailor your pricing strategy to meet market demands and optimize your business success.
          </p>
         </div>
         <div class="grid-item">
             <img  src="./images/safe_img7.png" class="w3-padding-32"/>
-            <h4 class="w3-text-orange"> <b>Top Level Support</b></h4>
-           <p class="w3-large">
+            <h4 class="w3-text-orange" style="font-size: 25x;"> <b>Top Level Support</b></h4>
+            <p  style="font-size: 16px; line-height: 36px;">
             With the Synez managed service program, you have the flexibility to control the delivery of licenses, allowing you to offer competitive pricing that maximizes your profit margin. Enjoy the freedom to tailor your pricing strategy to meet market demands and optimize your business success.
            </p>
         </div>
@@ -407,33 +395,45 @@
     <p><a style="text-decoration:none" href="#Consulting">CONSULTING</a></p>
  </div>
  <div class="w3-quarter w3-medium w3-padding-small">
-    <h4 class="w3-padding-16">Keep in touch</h4>
-    <div class="contact-row">
+  <h4 class="w3-padding-16">Keep in touch</h4>
+  <ul class="w3-ul" style="display: grid;">
+    <li style="display: flex;align-items: flex-start; ">
       Address:
-      <p>C56/30 Sector 62 Noida 201307, Uttar Pradesh, India</p>
-    </div>
-    <div class="contact-row">
-    Phone:
-      <p>+0120 3112279, +0120 3112280</p>
-    </div>
-    <div class="contact-row">
-     Mobile:
-      <p>+91 7290 040506</p>
-    </div>
-    <div class="contact-row">
-    Email:
-      <p><a href="mailto:info@synzetech.com">info@synzetech.com</a></p>
-    </div>
- </div>
+        <div  style="margin-left: 12px;">
+          <p style="margin: 0;"> C56/30 Sector 62 Noida 201307,</p>
+        <p style="margin: 0;">Uttar Pradesh, India</p>
+        </div>
+    </li> 
+    <li style="display: flex;align-items: flex-start; ">
+      Phone:
+        <div  style="margin-left: 12px;">
+          <p style="margin: 0;">+120 3112279, +120 3112280</p>
+        </div>
+    </li> 
+    <li style="display: flex;align-items: flex-start; ">
+      Mobile:
+        <div  style="margin-left: 12px;">
+          <p style="margin: 0;">+91 7290 040506</p>
+        </div>
+    </li> 
+    <li style="display: flex;align-items: flex-start; ">
+      Email:
+        <div  style="margin-left: 12px;">
+          <a href="mailto:info@synzetech.com">info@synzetech.com</a>
+        </div>
+    </li> 
+</ul>
+</div>
     <div class="w3-quarter w3-medium w3-padding-small">
         
         <div class="social-icon w3-half">
-            <a href="mailto:info@example.com"><i class="fa fa-envelope w3-hover-opacity"></i></a>
+            <a href="mailto:info@syneztech.com"><i class="fa fa-envelope w3-hover-opacity"></i></a>
           </div>
           <div class="social-icon w3-half">
-            <a href="https://www.linkedin.com/in/yourprofile"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+            <a href="https://www.linkedin.com/company/synez-tech/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
           </div>
- </div></div>
+         </div>
+</div>
 <div class="w3-border-top"> </div>
  <div class="w3-padding-16">Copyright © 2023. Synez Technologies</div>
  </footer>
