--- a/consulting.html
+++ b/consulting.html
@@ -26,7 +26,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-image: url("./images/consulting_bg_img1.png");
-    height: auto;
+    height: 700px;
     width: '100%';
     
     }
@@ -108,7 +108,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 500px; /* Or use 100vh for full viewport height */
+  height: 700px; /* Or use 100vh for full viewport height */
   width: 100vw; /* This will cover the full width of the viewport */
   filter: brightness(0.7);
   z-index: 1; 
